# zkipfs-proof

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  LICENSE  PERFORMANCE_REPORT.md  README.md  SECURITY_AUDIT.md  docker-compose.dev.yml  docker-compose.enterprise.yml  docker-compose.mock.yml  test.txt
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/zkipfs-proof/: README.md  action.yml
.github/workflows/: ci.yml  security-scan.yml
.github/workflows/examples/: content-verification.yml  security-audit.yml
backend/cli/: Cargo.toml
backend/cli/src/: config.rs  main.rs  progress.rs  utils.rs
backend/cli/src/commands/: benchmark.rs  config.rs  generate.rs  info.rs  init.rs  ipfs.rs  mod.rs  verify.rs  version.rs
backend/contracts/: Makefile  foundry.toml
backend/contracts/script/: Deploy.s.sol
backend/contracts/src/: ZkIPFSVerifier.sol
backend/contracts/src/interfaces/: IZkIPFSVerifier.sol
backend/contracts/src/libraries/: ProofLib.sol  SecurityLib.sol
backend/contracts/test/: ZkIPFSVerifier.t.sol
backend/core/: Cargo.toml
backend/core/guest/: Cargo.toml
backend/core/guest/src/: main.rs
backend/core/methods/: Cargo.toml
backend/core/methods/guest/: Cargo.toml
backend/core/methods/src/: lib.rs
backend/core/src/: advanced_verification.rs  cache.rs  ecosystem_integration.rs  error.rs  error_patterns.rs  i18n.rs  ipfs.rs  ipfs_client.rs  lib.rs  monitoring.rs  performance.rs  profiling.rs  proof.rs  proof_types.rs  types.rs  verifier.rs
backend/server/: Cargo.toml  Dockerfile
backend/server/src/: auth.rs  db.rs  handlers.rs  main.rs  state.rs
config/: prometheus.yml
docs/: api-reference.md  getting-started.md
examples/: README.md
frontend/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/web/src/: App.jsx
frontend/web/src/components/: BatchProofGeneration.jsx  FileUpload.jsx  Footer.jsx  Header.jsx  Hero.jsx  LoadingScreen.jsx  ProofExplorer.jsx  ProofGeneration.jsx  ProofVerification.jsx
frontend/web/src/components/ui/: badge.jsx  progress.jsx  select.jsx  switch.jsx  textarea.jsx
frontend/web/src/hooks/: useTheme.js  useWeb3.js
frontend/web/src/lib/: api.js
frontend/web/src/pages/: AboutPage.jsx  BatchGeneratePage.jsx  DocsPage.jsx  ExplorePage.jsx  GeneratePage.jsx  HomePage.jsx  VerifyPage.jsx
frontend/web/src/pages/dashboard/: Analytics.jsx  ApiKeys.jsx  DashboardLayout.jsx  Overview.jsx
scripts/: init-db.sql  test_integration_ipfs.ps1
scripts/mock-backend/: server.js
test-web/: index.html
tests/: README.md
tests/integration/proof_generation/: end_to_end_test.rs
tests/performance/: benchmark_suite.rs
tests/unit/core/: proof_generation_test.rs
web/: package.json
zkipfs-proof-web/: package-lock.json
