[workspace]
members = [
    "backend/core",
    "backend/cli",
    "backend/core/methods",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sowad Al-Mughni <sowadalmughni@gmail.com>"]
license = "MIT"
repository = "https://github.com/sowadalmughni/zkipfs-proof"
homepage = "https://zkipfs-proof.org"
description = "Zero-knowledge proofs for IPFS content verification"
keywords = ["zero-knowledge", "ipfs", "cryptography", "verification", "privacy"]
categories = ["cryptography", "command-line-utilities", "web-programming"]
readme = "README.md"

[workspace.dependencies]
# Risc0 ZK-VM dependencies
risc0-zkvm = { version = "1.2", features = ["prove"] }
risc0-groth16 = "1.2"
bonsai-sdk = "1.0"

# IPFS and content addressing
ipfs-api-backend-hyper = "0.6"
cid = "0.11"
multihash = "0.19"
libipld = "0.16"

# Cryptography
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
bs58 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
protobuf = "3.4"

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = "1.0"

# CLI and user interface
clap = { version = "4.4", features = ["derive", "color"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Configuration and file system
dirs = "5.0"
toml = "0.8"
serde_yaml = "0.9"

# System information
num_cpus = "1.16"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
walkdir = "2.4"
flate2 = "1.0"

# Testing
proptest = "1.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true

