[package]
name = "zkipfs-proof-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for zkIPFS-Proof"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "zkipfs-proof"
path = "src/main.rs"

[dependencies]
# Core library
zkipfs-proof-core = { path = "../core" }

# CLI and user interface
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Configuration and file system
dirs = { workspace = true }

# System information
num_cpus = { workspace = true }

# Cryptography
hex = { workspace = true }
sha2 = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = { workspace = true }

