[package]
name = "zkipfs-proof-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core zero-knowledge proof engine for IPFS content verification"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Methods for guest programs
zkipfs-proof-methods = { path = "methods" }

# Risc0 ZK-VM dependencies
risc0-zkvm = { workspace = true }
risc0-groth16 = { workspace = true }
bonsai-sdk = { workspace = true, optional = true }

# IPFS and content addressing
ipfs-api-backend-hyper = { workspace = true }
cid = { workspace = true }
multihash = { workspace = true }
libipld = { workspace = true }

# Cryptography
sha2 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
regex = "1.10"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
protobuf = { workspace = true }

# Async runtime and networking
tokio = { workspace = true }
reqwest = { workspace = true }
hyper = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["bonsai"]
bonsai = ["dep:bonsai-sdk"]
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]

