[package]
name = "zkipfs-proof-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.8"
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
futures = "0.3"
tower_governor = "0.4"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }
rand = "0.8"

# Local dependencies
zkipfs-proof-core = { path = "../core" }
