[package]
name = "ipfs-content-verifier-guest"
version = "0.1.0"
edition = "2021"

[workspace]


[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false }

[[bin]]
name = "ipfs_content_verifier"
path = "src/main.rs"

